Linear Regression w Gradient Descent

--- a/Linear Regression/Linear Regression-Diabetes.ipynb
+++ b/Linear Regression/Linear Regression-Diabetes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f5dd2cc0",
+   "id": "c7322d39",
    "metadata": {},
    "source": [
     "## Import Library"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f307b75e",
+   "id": "1a62a13e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6a39cec",
+   "id": "ed97c349",
    "metadata": {},
    "source": [
     "## Loading the dataset"
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c104104a",
+   "id": "45933f06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "052fb7e8",
+   "id": "af7a2746",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0030cb74",
+   "id": "a9993147",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f8e5d10c",
+   "id": "563bbbf6",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b292e74",
+   "id": "b84dff15",
    "metadata": {},
    "source": [
     "## Creating X,Y"
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "08805a63",
+   "id": "7363dbcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "511e784b",
+   "id": "edbbefc0",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e435aaba",
+   "id": "cbc4666a",
    "metadata": {},
    "source": [
     "# Data Split"
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce3b6ce7",
+   "id": "42edc472",
    "metadata": {},
    "source": [
     "### Import Libraries"
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fad4e55d",
+   "id": "cb8f7770",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f536b8f4",
+   "id": "0858381c",
    "metadata": {},
    "source": [
     "#### Perform 80/20 Data Split"
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "21fcee04",
+   "id": "dfb949c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0c84bd6",
+   "id": "d0e04d0b",
    "metadata": {},
    "source": [
     "#### Data dimension"
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d5a45f72",
+   "id": "65d0409f",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c5060658",
+   "id": "bfe4e055",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8640964f",
+   "id": "b541e790",
    "metadata": {},
    "source": [
     "# Linear Regression Model"
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd4a7002",
+   "id": "efae95e6",
    "metadata": {},
    "source": [
     "#### Import Libraries"
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2788b485",
+   "id": "9a97d7f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dfc1cf0",
+   "id": "15c8ccde",
    "metadata": {},
    "source": [
     "#### Defining the Model"
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f8df0320",
+   "id": "eab69791",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b86af542",
+   "id": "39140b40",
    "metadata": {},
    "source": [
     "#### Building training Model"
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f074e16e",
+   "id": "fd97c981",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b99c556c",
+   "id": "d3979c17",
    "metadata": {},
    "source": [
     "#### Apply trained model to make predictions (on test set)"
@@ -415,17 +415,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "c851b25e",
+   "execution_count": 46,
+   "id": "89f02e78",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y_pred = model.predict(X_test)"
+    "Y_pred = model.predict(X_test)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fdda016e",
+   "id": "e57e0824",
    "metadata": {},
    "source": [
     "### Prediction Results"
@@ -434,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "30fb1a51",
+   "id": "d96b3408",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8622eb5a",
+   "id": "2a4dc2ac",
    "metadata": {},
    "source": [
     "### Scatter Plots"
@@ -469,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64e28f03",
+   "id": "1292ea93",
    "metadata": {},
    "source": [
     "#### Import Library"
@@ -478,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d6e799f8",
+   "id": "4dafe21b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b6c4f4d",
+   "id": "a436c1bb",
    "metadata": {},
    "source": [
     "### Make scatter plot"
@@ -496,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5831b146",
+   "id": "3c1f3657",
    "metadata": {},
    "source": [
     "#### Data"
@@ -505,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "a5fd3e56",
+   "id": "842f8e1b",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d353e84b",
+   "id": "fcaf4d1b",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "9767b71a",
+   "id": "23375017",
    "metadata": {},
    "outputs": [
     {
@@ -615,14 +616,6 @@
    "source": [
     "sns.scatterplot(Y_test,Y_pred, alpha=0.5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54bb1341",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
